[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flow-cli"
version = "1.0.0"
description = "Flow 图片生成命令行工具"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Flow CLI"}]
dependencies = [
    "curl-cffi>=0.7.0",
    "tomli>=2.0.0",
    "Pillow>=9.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
]

[project.scripts]
flow-cli = "flow_cli.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["flow_cli*"]
